# dengine

./: Cargo.toml  README.md
src/: action.rs  activity.rs  base64_interface.rs  bridge_api.rs  browser.rs  calltype.rs  common.rs  context.rs  debot_abi.rs  dengine.rs  dinterface.rs  errors.rs  helpers.rs  hex_interface.rs  info.rs  json_interface.rs  json_lib_utils.rs  lib.rs  msg_interface.rs  network_interface.rs  prelude.rs  query_interface.rs  routines.rs  run_output.rs  sdk_interface.rs  sdk_prelude.rs  wasm_api.rs
src/builtin_interfaces/: dinterface.rs  json_interface.rs  json_lib_utils.rs  mod.rs  msg_interface.rs  network_interface.rs  query_interface.rs  sdk_interface.rs
src/json_interface/: client.rs  debot.rs  handlers.rs  interop.rs  mod.rs  modules.rs  registrar.rs  request.rs  runtime.rs
tests/: integration_tests.rs
tests/testsystem/: mod.rs  testcase.rs
tests/testsystem/contracts/: .gitignore  debot1.abi.json  debot1.sol  debot1.tvc
tests/testsystem/givers/: addresses.json  giverv3.abi.json
tests/testsystem/testbrowser/: callbacks.rs  config.rs  dinterface.rs  encryption_box.rs  helpers.rs  mod.rs  term_browser.rs
tests/testsystem/testbrowser/interfaces/: echo.rs  encryption_box_input.rs  mod.rs  signing_box_input.rs  terminal.rs
