[package]
name = "dengine"
version = "0.2.0"
edition = "2021"
authors = [ 'Ever Surf <https://ever.surf>' ]
rust-version = "1.66"
description = "Debot engine library"

[lib]
name = 'dengine'
crate-type = [ 'cdylib', 'rlib', 'staticlib' ]

[dependencies]
api_derive = { git = 'https://github.com/tonlabs/ever-sdk.git', tag = '1.44.1' }
api_info = { git = 'https://github.com/tonlabs/ever-sdk.git', tag = '1.44.1' }

ton_client = { git = 'https://github.com/tonlabs/ever-sdk.git', tag = '1.44.1' }
ton_sdk = { git = 'https://github.com/tonlabs/ever-sdk.git', tag = '1.44.1' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.84' }
ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', tag = '2.3.126' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.15' }
lockfree = { git = 'https://github.com/tonlabs/lockfree.git', package = 'lockfree' }
log = '0.4.11'
base64 = '0.10.0'
hex = '0.3.2'
chrono = '~0.4.6'
serde = '1.0.91'
serde_json = '~1.0.41'
serde_derive = '~1.0.91'
sha2 = '0.9.5'
async-trait = '0.1.40'
serde_repr = '0.1.7'
num-traits = '0.2'
crc = '3.0'
tokio = { default-features = false, features = [ 'sync' ], version = '1.4' }
reqwest = { features = [ 'cookies' ], version = '0.11.11' }

lazy_static = '1.1.0'
futures = '0.3.4'
num-derive = '0.3'

[dev-dependencies]
anyhow = "1.0"
lazy_static = '1.1.0'
num-bigint = '0.4'
num-traits = '0.2'
regex = '1.5.4'

[features]
wasm = ['ton_client/wasm']
